# visual_odometry

./: .gitignore  README.md  docker-compose.yml  novnc.env
docker/: .dockerignore  sophus_setup.sh  vio.dockerfile
vio_workspace/src/vio/: CMakeLists.txt  package.xml
vio_workspace/src/vio/include/vio/: BundleAdjustment.h  GroundTruthPublisher.h  LoadData.h  OdometryPublisher.h  PointCloudPublisher.h  VisualOdometry.h  VisualOdometryPublisher.h
vio_workspace/src/vio/src/: BundleAdjustment.cpp  GroundTruthPublisher.cpp  LoadData.cpp  OdometryPublisher.cpp  PointCloudPublisher.cpp  VisualOdometry.cpp  VisualOdometryPublisher.cpp  main.cpp  run_vio.cpp  test.py
